--- a/tests.html
+++ b/tests.html
@@ -9,7 +9,7 @@
         <div id="fixtures"></div>
         <script src="node_modules/mocha/mocha.js"></script>
         <script src="node_modules/chai/chai.js"></script>
-        <script src="Week6Project.js"
+        <script src="Week6Project.js"></script>
         <script>mocha.setup('bdd')</script>
         <script src="index_test.js"></script>
         <script>mocha.run();</script>
